--- a/css/style08.css
+++ b/css/style08.css
@@ -75,4 +75,9 @@ button{
     color: #fff;
 }
 
-
+.escura{
+    background:#333;
+    color:#fff;
+    border-radius: 5px;
+    padding: 0.625rem;
+}
